# WorkspaceFlipper

./: .gitignore  CMakeLists.txt  ReadMe.md
Images/: FlipperIcon.iom
Source/: CMakeLists.txt  Defaults.h  SettingsApp.cpp  SettingsApp.rdef  SettingsWindow.cpp  SettingsWindow.h  WorkspaceFlipFilter.cpp  WorkspaceFlipFilter.h  ZonePreview.cpp  ZonePreview.h
